--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="page-block" style="background:#000;padding-bottom:50px">
                     <img style="display:block;width:100%" src="./content/images/intro/03.jpg" alt="">
-                    <img style="display:block;width:100%" src="./content/images/intro/2.png" alt="">
+                    <img style="display:block;width:100%" src="./content/images/intro/2.jpg" alt="">
                     <img style="display:block;width:100%" src="./content/images/intro/01.jpg" alt="">
                     <img style="display:block;width:100%" src="./content/images/intro/02.jpg" alt="">
                 </div>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="page-block">
                     <img style="display:block;width:100%" src="./content/images/intro/03.jpg" alt="">
-                    <img style="display:block;width:100%" src="./content/images/intro/2.png" alt="">
+                    <img style="display:block;width:100%" src="./content/images/intro/2.jpg" alt="">
                     <img style="display:block;width:100%" src="./content/images/intro/01.jpg" alt="">
                     <img style="display:block;width:100%" src="./content/images/intro/02.jpg" alt="">
                 </div>
@@ -125,7 +125,9 @@
     <script style="text/javascript" src="./content/script/jquery.waypoints.min.js"></script>
     <script type="text/javascript" src="./content/script/common.js"></script>
     <script type="text/javascript" src="./content/script/Vue-v2.6.10.js"></script>
-    <script type="text/javascript" src="./content/script/dis/bundle.js"></script>
+    <script>
+    document.write('<script type="text/javascript" src="./content/script/dis/bundle.js?t=' + new Date().getDate() + '"><\/script>')
+    </script>
 </body>
 
 </html>
