--- a/works.html
+++ b/works.html
@@ -80,7 +80,9 @@
     <!--
     <script type="text/javascript" src="./content/script/lib/vue-components.js"></script>
     <script type="text/javascript" src="./content/script/lib/vue-data.js"></script>-->
-    <script type="text/javascript" src="./content/script/dis/bundle.js"></script>
+    <script>
+    document.write('<script type="text/javascript" src="./content/script/dis/bundle.js?t=' + new Date().getDate() + '"><\/script>')
+    </script>
     <script>
     // $(".project_title").hover3d({
     //     selector: ".title_img_box",
