--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                                         <p>十年来，御舍设计成功为国内外客户提供空间设计服务，包括五星级酒店、精品酒店、样板房、会所空间、餐饮空间、高端品牌旗舰店、豪华私人住宅等，御舍以独特的创意及对空间艺术的追求，结合对高品质生活艺术的理解,对其所参与的每一个项目都力求达到一个更新的高度。</p>
                                     </div>
                                     <div class="en" style="margin-top: 10px;">
-                                        <p>YUSHE International design co. LTD consists of a number of foreign senior designer team building to public equipment, soft-mounted chain integration and development for the two wings, focusing on the art space and environment design, committed to the forefront of space design concept, excellent construction technology, quality follow-up service, for customers to create a comfortable life space and new environment.</p>
-                                        <p>Over the past ten years, YUSHE has successfully provided space design services for domestic and foreign customers, which include five-star hotels, boutique hotels, model houses, club space, restaurant space, high-end brand flagship stores, luxury private residences. YUSHE strive to reach a new level sophistication of every project participates in with our unique creativity and artistic pursuit of space and the understanding of high quality of life art.</p>
+                                        <p> Yushe International Design Co., Ltd. is formed by several senior design teams, and takes  industry chain of hard outfit and soft loading as the two wings of integrated development, which is focused on art space and environmental design and devoted to cutting-edge space design, fine construction technology and superior follow-up service to create comfortable living and new space environment for customers.</p>
+                                        <p>In the past ten years, Yushe Design has successfully offered space design services to domestic and international customers, including five-star hotels, boutique hotels, model houses, club spaces, dining spaces, high-end brand flagship stores, luxury private residences, etc. With unique creations and the pursuit of space art, coupled with the understanding of high-quality art of living, Yushe is aimed at reaching a newer height for every program it is involved in.</p>
                                     </div>
                                 </div>
                             </div>
@@ -73,7 +73,7 @@
                     <img style="display:block;width:100%" src="./content/images/intro/03.jpg" alt="">
                     <img style="display:block;width:100%" src="./content/images/intro/2.jpg" alt="">
                     <img style="display:block;width:100%" src="./content/images/intro/01.jpg" alt="">
-                    <img style="display:block;width:100%" src="./content/images/intro/02.jpg" alt="">
+                    <!-- <img style="display:block;width:100%" src="./content/images/intro/02.jpg" alt=""> -->
                 </div>
             </div>
         </div>
@@ -103,8 +103,8 @@
                             <div class="cn" style="margin-top: 10px;">
                                 <p>御舍国际设计有限公司由多位资深设计团队组建, 以硬装，软装产业链为两翼融合发展，专注于艺术空间和环境设计，致力於前沿的空间设计理念、细妙的施工工艺、优质的後续服务，为客户创造出舒适的生活与空间新境。</p>
                                 <p>十年来，御舍设计成功为国内外客户提供空间设计服务，包括五星级酒店、精品酒店、样板房、会所空间、餐饮空间、高端品牌旗舰店、豪华私人住宅等，御舍以独特的创意及对空间艺术的追求，结合对高品质生活艺术的理解,对其所参与的每一个项目都力求达到一个更新的高度。</p>
-                                <p>YUSHE International design co. LTD consists of a number of foreign senior designer team building to public equipment, soft-mounted chain integration and development for the two wings, focusing on the art space and environment design, committed to the forefront of space design concept, excellent construction technology, quality follow-up service, for customers to create a comfortable life space and new environment.</p>
-                                <p>Over the past ten years, YUSHE has successfully provided space design services for domestic and foreign customers, which include five-star hotels, boutique hotels, model houses, club space, restaurant space, high-end brand flagship stores, luxury private residences. YUSHE strive to reach a new level sophistication of every project participates in with our unique creativity and artistic pursuit of space and the understanding of high quality of life art.</p>
+                                <p> Yushe International Design Co., Ltd. is formed by several senior design teams, and takes  industry chain of hard outfit and soft loading as the two wings of integrated development, which is focused on art space and environmental design and devoted to cutting-edge space design, fine construction technology and superior follow-up service to create comfortable living and new space environment for customers.</p>
+                                <p>In the past ten years, Yushe Design has successfully offered space design services to domestic and international customers, including five-star hotels, boutique hotels, model houses, club spaces, dining spaces, high-end brand flagship stores, luxury private residences, etc. With unique creations and the pursuit of space art, coupled with the understanding of high-quality art of living, Yushe is aimed at reaching a newer height for every program it is involved in.</p>
                             </div>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                     <img style="display:block;width:100%" src="./content/images/intro/03.jpg" alt="">
                     <img style="display:block;width:100%" src="./content/images/intro/2.jpg" alt="">
                     <img style="display:block;width:100%" src="./content/images/intro/01.jpg" alt="">
-                    <img style="display:block;width:100%" src="./content/images/intro/02.jpg" alt="">
+                    <!-- <img style="display:block;width:100%" src="./content/images/intro/02.jpg" alt=""> -->
                 </div>
             </div>
         </div>
