--- a/pro_detail.html
+++ b/pro_detail.html
@@ -62,7 +62,7 @@
                         <p class="text_content"><span class="text_title">项目地点</span> | {{detail.location}}</p>
                     </div>
                     <div class="text_info_box" v-if="detail.construction">
-                        <p class="text_content"><span class="text_title">施工单位</span> | {{detail.construction}}</p>
+                        <p class="text_content"><span class="text_title">设计单位</span> | {{detail.construction}}</p>
                     </div>
                     <div class="text_info_box" v-if="detail.area">
                         <p class="text_content"><span class="text_title">建筑面积</span> | {{detail.area}}</p>
@@ -96,7 +96,7 @@
                     <p class="deep_gray">项目名称 | {{detail.title}}</p>
                     <p class="deep_gray">主案设计 | {{detail.design}}</p>
                     <p class="deep_gray">项目地点 | {{detail.location}}</p>
-                    <p class="deep_gray">施工单位 | {{detail.construction}}</p>
+                    <p class="deep_gray">设计单位 | {{detail.construction}}</p>
                     <p class="deep_gray" v-if="detail.area">建筑面积 | {{detail.area}}</p>
                     <p style="padding:0 0 15px"><span style="color: rgb(48, 48, 48);"></span></p>
                 </div>
