--- a/works.html
+++ b/works.html
@@ -45,7 +45,7 @@
                                             <p>主案设计 | {{pro.design}}</p>
                                             <p>项目名称 | {{pro.title}}</p>
                                             <p>项目地点 | {{pro.location}}</p>
-                                            <p>施工单位 | {{pro.designCom}}</p>
+                                            <p>设计单位 | {{pro.designCom}}</p>
                                             <p>建筑面积 | {{pro.area}}</p>
                                         </div>
                                     </div>
@@ -60,7 +60,7 @@
                                 <p>主案设计 | {{pro.design}}</p>
                                 <p>项目名称 | {{pro.title}}</p>
                                 <p>项目地点 | {{pro.location}}</p>
-                                <p>施工单位 | {{pro.designCom}}</p>
+                                <p>设计单位 | {{pro.designCom}}</p>
                                 <p>建筑面积 | {{pro.area}}</p>
                             </div>
                         </div>
