--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div> -->
                     <div style="margin-top:10px;" class="page_text_container ani_delay_3" data-av-animation="self_slide_up">
                         <div class="grid">
-                            <div class="grid-item grid-item--width2 grid_reveal" data-av-animation="self_slide_up">
+                            <div class="grid-item grid-item--full grid_reveal" data-av-animation="self_slide_up">
                                 <div class="title sub_title grid_reveal ani_delay_1" data-av-animation="self_slide_up" data-index="1" style="text-align:center;padding-bottom:25px">
                                     <p>OUR ENVIRONMENT</p>
                                     <p>公司环境</p>
@@ -51,7 +51,16 @@
                                 <img src="./content/images/intro/company.jpg" alt="">
                                 <img src="./content/images/intro/company2.jpg" alt="">
                             </div>
-                            <div class="grid-item grid-item--width2 grid_reveal" data-av-animation="self_slide_up">
+                        </div>
+                    </div>
+                </div>
+                <div class="page-block">
+                    <!--  <div class="page_text_container grid_reveal" data-av-animation="self_slide_up" data-index="1">
+                        <div class="title grid_reveal" data-av-animation="self_slide_up">御舍简介</div>
+                    </div> -->
+                    <div style="margin-top:10px;" class="page_text_container ani_delay_3" data-av-animation="self_slide_up">
+                        <div class="grid">
+                            <div class="grid-item grid-item--full grid_reveal" data-av-animation="self_slide_up">
                                 <div class="title sub_title grid_reveal ani_delay_1" data-av-animation="self_slide_up" data-index="1" style="text-align:center;padding-bottom:25px">
                                     <p>ABOUT US</p>
                                     <p>关于我们</p>
