--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                     <p>OUR ENVIRONMENT</p>
                                     <p>公司环境</p>
                                 </div>
-                                <img src="./content/images/intro/company.jpg" alt="">
+                                <img src="./content/images/intro/company.jpg" alt=""><br>
                                 <img src="./content/images/intro/company2.jpg" alt="">
                             </div>
                         </div>
