--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit" />
     <!-- Mobile Devices Support @begin -->
-    <meta content="no-cache,must-revalidate" http-equiv="Cache-Control" />
+    <!-- <meta content="no-cache,must-revalidate" http-equiv="Cache-Control" /> -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
     <meta content="no-cache" http-equiv="pragma" />
     <meta content="0" http-equiv="expires" />
     <meta content="telephone=no,address=no" name="format-detection" />
@@ -97,8 +99,8 @@
                 <div class="page-block">
                     <div class="int-block int-block-mobile grid_reveal" data-av-animation="self_slide_up" data-index="2">
                         <div class="title sub_title grid_reveal" data-av-animation="self_slide_up">
-                            <p>OUR ENVIRONMENT</p>
-                            <p>公司环境</p>
+                            <p class="title-en">OUR ENVIRONMENT</p>
+                            <p class="title-zh">公司环境</p>
                         </div>
                         <img style="margin-top: 10px;display:block;width:100%" src="./content/images/intro/company.jpg" alt="">
                         <img style="margin-top: 10px;display:block;width:100%" src="./content/images/intro/company2.jpg" alt="">
@@ -107,8 +109,8 @@
                 <div class="page-block">
                     <div class="int-block int-block-mobile grid_reveal" data-av-animation="self_slide_up" data-index="2">
                         <div class="title sub_title grid_reveal" data-av-animation="self_slide_up">
-                            <p>ABOUT US</p>
-                            <p>关于我们</p>
+                            <p class="title-en">ABOUT US</p>
+                            <p class="title-zh">关于我们</p>
                         </div>
                         <div class="text grid_reveal ani_delay_2" data-av-animation="self_slide_up" data-index="5">
                             <div class="cn" style="margin-top: 10px;">
