--- a/pro_detail.html
+++ b/pro_detail.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit" />
     <!-- Mobile Devices Support @begin -->
-    <meta content="no-cache,must-revalidate" http-equiv="Cache-Control" />
+    <!-- <meta content="no-cache,must-revalidate" http-equiv="Cache-Control" /> -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
     <meta content="no-cache" http-equiv="pragma" />
     <meta content="0" http-equiv="expires" />
     <meta content="telephone=no,address=no" name="format-detection" />
