--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- <meta content="no-cache,must-revalidate" http-equiv="Cache-Control" /> -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
-    <meta content="no-cache" http-equiv="pragma" />
+    <meta http-equiv="Expires" content="0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="0" http-equiv="expires" />
     <meta content="telephone=no,address=no" name="format-detection" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
