--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
     <script type="text/javascript" src="./content/script/aniview.js"></script>
     <script type="text/javascript" src="./content/script/fastclick.js"></script>
     <script type="text/javascript" src="./content/script/jquery.mousewheel.min.js"></script>
-    <script style="text/javascript" src="./content/script/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="./content/script/jquery.waypoints.min.js"></script>
     <script type="text/javascript" src="./content/script/common.js"></script>
     <script type="text/javascript" src="./content/script/Vue-v2.6.10.js"></script>
     <script type="text/javascript" src="./content/script/dis/bundle.js"></script>
