--- a/works.html
+++ b/works.html
@@ -75,7 +75,7 @@
     <script type="text/javascript" src="./content/script/aniview.js"></script>
     <script type="text/javascript" src="./content/script/fastclick.js"></script>
     <script type="text/javascript" src="./content/script/jquery.mousewheel.min.js"></script>
-    <script style="text/javascript" src="./content/script/jquery.waypoints.min.js"></script>
+    <script type="text/javascript" src="./content/script/jquery.waypoints.min.js"></script>
     <script type="text/javascript" src="./content/script/common.js"></script>
     <script src="./content/script/jquery-hover3d.min.js"></script>
     <script type="text/javascript" src="./content/script/Vue-v2.6.10.js"></script>
